--- a/homestyles.css
+++ b/homestyles.css
@@ -1,9 +1,15 @@
 body{
     background-color: #f5826e;
 }
-h1{
+h2{
+    margin: 10px auto;
+    word-spacing: 150px;
     text-align: center;
 }
-p{
+h1{
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+p1{
     font-style: italic;
 }
