--- a/homestyles.css
+++ b/homestyles.css
@@ -12,4 +12,9 @@ h1{
 }
 p1{
     font-style: italic;
+    font-size: large;
+  /*  box-sizing: border-box;
+    width: 100%;
+    border: solid black 2px;
+    padding: 5px; */
 }
