--- a/aboutstyles.css
+++ b/aboutstyles.css
@@ -16,6 +16,10 @@
 }
 p{
   font-size: 30px;
-  padding: 100px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-bottom: 100px;
 }
-
+img{
+  padding-top: 130px;
+}
