--- a/aboutstyles.css
+++ b/aboutstyles.css
@@ -1,12 +1,12 @@
 
 
-.header {
+/* .header {
     padding: 60px;
     text-align: center;
     background: lightcoral;
     color: white;
     font-size: 50px;
-  }
+  } */
 
   * {
     text-align: center;
