--- a/contactstyles.css
+++ b/contactstyles.css
@@ -14,11 +14,11 @@
 }
 
 
-.background {
+/* .background {
     background: lightcoral;
     background-blend-mode: darken;
     background-size: auto;
-}
+} */
 
 /* .firstsection {
     height: 100vh;
