Update Added char gifs to the project for styling, reorganized files, created a button that when click directs you to the game, stylized the home page, the about page and I'm about to start working on the tutorial next

--- a/index.css
+++ b/index.css
@@ -1,17 +1,14 @@
-h1, p {
-    text-align: center;
-    font-size: 100px;
-    margin-bottom: -150px;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+@font-face {
+	font-family: Elemento;
+	src: url('./../font/Elemento-Regular.otf');
 }
 
 body {
-    margin: 0px;
-    background-color: #718383;
-}
-
-body canvas {
-    padding: 0;
-    margin: 0px auto 0px;
-    display: block;
-    width: 100%;
+	font-family: Elemento;
 }
