--- a/feedbackForm/contactstyles.css
+++ b/feedbackForm/contactstyles.css
@@ -1,5 +1,5 @@
 /* makes flush to the sides */
-* {
+/* * {
     text-align: center;
     margin:0.5px;
     padding:10px;
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
 
 /* .background {
@@ -25,7 +25,7 @@
 } */
 
 /* the format for the header pic */
-.pic-main {
+/* .pic-main {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,18 +45,18 @@
 .firstHalf img {
     display: flex;
     border-radius: 9050px;
-}
+} */
 /* text for the about us */
-.text-big {
+/* .text-big {
     /* color: black; */
-    font-family: 'Piazzolla', serif;
+    /* font-family: 'Piazzolla', serif;
     font-weight: bold;
     font-size: 50px;
     text-align: center;
-}
+} */ 
 /* format for the text under about us */
-.text-small {
-    /* color: black; */
+/* .text-small {
+    color: black;
     font-family: 'Sansita Swashed', cursive;
     font-size: 20px;
     text-align: center;
@@ -85,29 +85,29 @@
 
     font-family: sans-serif;
     text-align: center;
-}
+} */
 /* this will make the people either in a line horizontally or in a line vertically */
-#profiles {
+/* #profiles {
     margin: 34px;
     display: flex;
-}
+} */
 /* padding for pices */
-#profiles .pic {
+/* #profiles .pic {
 
     padding: 90px;
     margin: 3px 6px;
     border-radius: 28px;
-}
+} */
 /* this is to make the image area circular not square */
-#profiles .pic img {
+/* #profiles .pic img {
     margin-top: 10px;
     height: 150px;
     margin: auto;
     display: block;
     border-radius: 100px;
-}
+} */
 
-#profiles .pic p {
+/* #profiles .pic p {
     
     font-family: sans-serif;
     text-align: center;
@@ -131,4 +131,69 @@
 width: 100%;
 display: block;
 }
+} */
+
+/* able, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+  th, td {
+    padding: 5px;
+    text-align: left;
+  } */
+
+  .feed{
+    width: 100%;
+    height: 100vh;
+    background-color: lightcoral;
+    display: flex;
+    align-items: center;
+    justify-content: center
+  }
+form{
+    width: 90%;
+    max-width: 600px;
+
 }
+
+.input{
+    margin-bottom: 30px;
+    position: relative;
+}
+input, textarea{
+    width:100%;
+    padding: 10px;
+    outline: 0;
+    border: 1px solid #fff;
+    color: #fff;
+    background: transparent;
+    font-size: 15px;
+}
+
+label{
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 10px;
+    color: #fff;
+    cursor: text;
+
+}
+button{
+    padding: 10px 0;
+    color: #fff;
+    outline: 3px;
+    background: transparent;
+    border: 1px solid #fff;
+    width: 100%;
+    cursor:pointer;
+}
+textarea:focus~label,
+textarea:valid~label{
+    top: -35px
+}
+
+
+
+
