--- a/style/gameStyles.css
+++ b/style/gameStyles.css
@@ -1,16 +1,25 @@
+.game-footer {
+	padding-top: 20px;
+	padding-right: 20px;
+	display: flex;
+	justify-content: end;
+	align-items: end;
+	text-align: bottom;
+	top: 620px;
+}
+
 .gametab-title {
 	text-align: center;
 	font-size: 100px;
-	position: absolute;
-	right: 65%;
-	left: 35%;
+	position: fixed;
+	right: 70%;
+	left: 30%;
 	padding-top: 50px;
 }
 
 .game-screen {
 	margin: 0px;
 	background-color: #718383;
-	position: absolute;
 	width: 100%;
 }
 
@@ -18,6 +27,5 @@
 	padding: 0;
 	margin: 0px auto 0px;
 	position: fixed;
-	align-items: baseline;
 	width: 100%;
 }
