--- a/style/homeStyles.css
+++ b/style/homeStyles.css
@@ -4,7 +4,7 @@ body {
 	line-height: 1.6;
 }
 
-h1 {
+.title-home {
 	font-size: 50px;
 	text-align: center;
 }
@@ -24,7 +24,7 @@ h1 {
 }
 
 .box {
-	width: 733px;
+	width: 741px;
 	height: 653px;
 	z-index: -1;
 	position: absolute;
@@ -40,5 +40,7 @@ h1 {
 	color: #fbeee0;
 }
 .dec-container {
+	text-align: center;
+	position: relative;
 	padding-left: 70px;
 }
