--- a/style/gameButton.css
+++ b/style/gameButton.css
@@ -1,7 +1,8 @@
 .gameBtn1 {
-	background-color: #f0dac4;
+	background-image: url('./../img/PlayButton/Play_Button1_580x200.png');
+
 	border: 2px solid #422800;
-	border-radius: 100px;
+	border-radius: 40px;
 	box-shadow: #422800 12px 12px 0 0;
 	color: #422800;
 	cursor: pointer;
@@ -9,22 +10,23 @@
 	font-weight: 600;
 	font-size: 50px;
 	padding: 0 18px;
+	left: 50px;
 	line-height: 50px;
 	text-align: center;
 	text-decoration: none;
 	user-select: none;
 	-webkit-user-select: none;
 	touch-action: manipulation;
-	width: 460px;
-	height: 150px;
+	width: 580px;
+	height: 200px;
 }
 
 .gameBtn1:hover {
-	background-color: #ededed;
+	background-image: url('./../img/PlayButton/Play_Button2_580x200.png');
 }
 
 .gameBtn1:active {
-	background-color: #ff6565;
+	background-image: url('./../img/PlayButton/Play_Button1_580x200.png');
 	box-shadow: #422800 2px 2px 0 0;
 	transform: translate(2px, 2px);
 }
