--- a/style/feedbackStyle.css
+++ b/style/feedbackStyle.css
@@ -1,15 +1,53 @@
-.container {
-	background-color: rgba(255, 255, 255, 0.8);
-	border: 1px solid #ddd;
-	border-radius: 5px;
-	margin: 50px auto;
-	padding: 20px;
-	width: 80%;
-}
-
 .home-link,
 .navbar-link {
-	padding: 30px;
+	padding: 10px;
+}
+
+.title-feedback {
+	font-size: 90px;
+	text-align: center;
+	text-shadow: 2px 2px #5f5f5f;
+}
+
+.feedback-title-side1 {
+	color: #d5b69a;
+}
+
+.feedback-title-side2 {
+	color: #635645;
+}
+
+.form-container {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	box-shadow: 2px 2px #5f5f5f;
+}
+
+.feedback-thanks {
+	display:flex;
+	text-align: center;
+	align-items: center;
+	font-size: 36px;
+	color: white;
+	background-color: #d5b69a;
+	padding: 60px;
+	width:50%;
+	text-shadow: 2px 2px #5f5f5f;
+}
+
+.logo-img-desc {
+	display:block;
+	width: 200px;
+	margin: auto;
+}
+
+.container {
+	background-color: #635645;
+	padding: 20px;
+	width: 50%;
+	color: white;
+	text-shadow: 2px 2px #5f5f5f;
 }
 
 .container h1 {
@@ -25,6 +63,11 @@
 .container legend {
 	font-size: 24px;
 	margin-bottom: 20px;
+	background-color: #d5b69a;
+	width: 100%;
+	padding:6px;
+	text-shadow: 2px 2px #5f5f5f;
+	box-shadow: 2px 2px #5f5f5f;
 }
 
 .container .row {
@@ -45,23 +88,55 @@
 .container input[type='text'],
 .container input[type='email'],
 .container textarea {
+	margin-top: -5px;
 	border-radius: 5px;
-	border: 1px solid #a10101;
+	border: 2px solid white;
 	padding: 10px;
 	width: 100%;
+	resize: none;
+	background-color: transparent;
+	color: #d5b69a;
+	box-shadow: 2px 2px #5f5f5f;
 }
 
 .container button[type='submit'] {
-	background-color: #333;
+	background-color: #d5b69a;
 	border: none;
 	border-radius: 5px;
-	color: #fff;
+	color: #635645;
 	cursor: pointer;
 	font-size: 16px;
 	padding: 10px 20px;
 	text-transform: uppercase;
+	display: block;
+	margin: auto;
+	box-shadow: 2px 2px #5f5f5f;
 }
 
 .container button[type='submit']:hover {
-	background-color: #555;
+	background-color: white;
+}
+
+.text-footer {
+	text-align: center;
+	padding: 10px;
+	font-size: 15px;
+	display: flex;
+	justify-content: center;
+	background-color: hsl(0, 0%, 15%);
+	box-shadow: 2px 2px #5f5f5f;
+	color: white;
+}
+
+.floor {
+	display:flex;
+	flex: wrap;
+	justify-content: center;
+}
+
+@media(max-width: 1000px) {
+	.container,
+	.feedback-thanks {
+		width: 100%;
+	}
 }
