--- a/style/gameStyles.css
+++ b/style/gameStyles.css
@@ -10,19 +10,15 @@
 }
 
 .game-screen canvas {
+	display:block;
 	margin: 0px auto 0px;
-	width: 100%;
+	width: 90%;
 }
 
 .game-footer {
-	/* padding-top: 20px;
-	padding-right: 20px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center; */
 	width: 100%;
 	display:flex;
 	justify-content: end;
 	align-items: end;
+	padding-top: 40px;
 }
