--- a/css/feedbackStyles.css
+++ b/css/feedbackStyles.css
@@ -1,14 +1,3 @@
-.home-link,
-.navbar-link {
-	padding: 10px;
-}
-
-.title-feedback {
-	font-size: 90px;
-	text-align: center;
-	text-shadow: 2px 2px #5f5f5f;
-}
-
 .feedback-title-side1 {
 	color: #d5b69a;
 }
@@ -17,11 +6,93 @@
 	color: #635645;
 }
 
+.logo-img-desc {
+	display:block;
+	width: 200px;
+	margin: auto;
+}
+
 .form-container {
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
 	box-shadow: 2px 2px #5f5f5f;
+}
+
+.form {
+	background-color: #635645;
+	padding: 20px;
+	width: 50%;
+	color: white;
+	text-shadow: 2px 2px #5f5f5f;
+}
+
+.form h1 {
+	text-align: center;
+}
+
+.form fieldset {
+	border: none;
+	margin: 0;
+	padding: 0;
+}
+
+.form legend {
+	font-size: 24px;
+	margin-bottom: 20px;
+	background-color: #d5b69a;
+	width: 100%;
+	padding:10px;
+	text-shadow: 2px 2px #5f5f5f;
+	box-shadow: 2px 2px #5f5f5f;
+}
+
+.form .row {
+	display: flex;
+	margin-bottom: 10px;
+	text-align: center;
+	font-weight: 700;
+}
+
+.form .col-25 {
+	flex: 25%;
+}
+
+.form .col-75 {
+	flex: 75%;
+}
+
+.form input[type='text'],
+.form input[type='email'],
+.form textarea {
+	margin-top: -5px;
+	border-radius: 5px;
+	border: 2px solid white;
+	padding: 10px;
+	width: 100%;
+	resize: none;
+	background-color: transparent;
+	color: #d5b69a;
+	box-shadow: 2px 2px #5f5f5f;
+	font-size: 15px;
+}
+
+.form button[type='submit'] {
+	background-color: #d5b69a;
+	border: none;
+	border-radius: 5px;
+	color: #635645;
+	cursor: pointer;
+	font-size: 16px;
+	padding: 10px 20px;
+	text-transform: uppercase;
+	display: block;
+	margin: auto;
+	box-shadow: 2px 2px #5f5f5f;
+}
+
+.form button[type='submit']:hover {
+	background-color: white;
 }
 
 .feedback-thanks {
@@ -36,106 +107,8 @@
 	text-shadow: 2px 2px #5f5f5f;
 }
 
-.logo-img-desc {
-	display:block;
-	width: 200px;
-	margin: auto;
-}
-
-.container {
-	background-color: #635645;
-	padding: 20px;
-	width: 50%;
-	color: white;
-	text-shadow: 2px 2px #5f5f5f;
-}
-
-.container h1 {
-	text-align: center;
-}
-
-.container fieldset {
-	border: none;
-	margin: 0;
-	padding: 0;
-}
-
-.container legend {
-	font-size: 24px;
-	margin-bottom: 20px;
-	background-color: #d5b69a;
-	width: 100%;
-	padding:6px;
-	text-shadow: 2px 2px #5f5f5f;
-	box-shadow: 2px 2px #5f5f5f;
-}
-
-.container .row {
-	display: flex;
-	margin-bottom: 10px;
-	text-align: center;
-	font-weight: 700;
-}
-
-.container .col-25 {
-	flex: 25%;
-}
-
-.container .col-75 {
-	flex: 75%;
-}
-
-.container input[type='text'],
-.container input[type='email'],
-.container textarea {
-	margin-top: -5px;
-	border-radius: 5px;
-	border: 2px solid white;
-	padding: 10px;
-	width: 100%;
-	resize: none;
-	background-color: transparent;
-	color: #d5b69a;
-	box-shadow: 2px 2px #5f5f5f;
-}
-
-.container button[type='submit'] {
-	background-color: #d5b69a;
-	border: none;
-	border-radius: 5px;
-	color: #635645;
-	cursor: pointer;
-	font-size: 16px;
-	padding: 10px 20px;
-	text-transform: uppercase;
-	display: block;
-	margin: auto;
-	box-shadow: 2px 2px #5f5f5f;
-}
-
-.container button[type='submit']:hover {
-	background-color: white;
-}
-
-.text-footer {
-	text-align: center;
-	padding: 10px;
-	font-size: 15px;
-	display: flex;
-	justify-content: center;
-	background-color: hsl(0, 0%, 15%);
-	box-shadow: 2px 2px #5f5f5f;
-	color: white;
-}
-
-.floor {
-	display:flex;
-	flex: wrap;
-	justify-content: center;
-}
-
 @media(max-width: 1000px) {
-	.container,
+	.form,
 	.feedback-thanks {
 		width: 100%;
 	}
