--- a/css/homeStyles.css
+++ b/css/homeStyles.css
@@ -1,20 +1,3 @@
-body {
-	background-color: #718383;
-	line-height: 1.5;
-}
-
-.logo {
-	width: 200px;
-	display: block;
-	margin: 20px auto 20px;
-}
-
-.title-home {
-	font-size: 90px;
-	text-align: center;
-	text-shadow: 2px 2px #5f5f5f;
-}
-
 .home-title-side1 {
 	color: #a30000;
 }
@@ -29,14 +12,14 @@ body {
 	margin: auto;
 }
 
-.dec-container {
+.home-container {
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
 	box-shadow: 2px 2px #5f5f5f;
 }
 
-.home-description {
+.home-desc {
 	display:flex;
 	text-align: center;
 	align-items: center;
@@ -55,23 +38,6 @@ body {
 	justify-content: center;
 	align-items: center;
 	background-color: #a30000;
-}
-
-.text-footer {
-	text-align: center;
-	padding: 10px;
-	font-size: 15px;
-	display: flex;
-	justify-content: center;
-	background-color: hsl(0, 0%, 15%);
-	box-shadow: 2px 2px #5f5f5f;
-	color: white;
-}
-
-.floor {
-	display:flex;
-	flex: wrap;
-	justify-content: center;
 }
 
 @media(max-width: 1000px) {
