--- a/css/tutorialStyles.css
+++ b/css/tutorialStyles.css
@@ -1,9 +1,3 @@
-.title-tutorial {
-	font-size: 90px;
-	text-align: center;
-	text-shadow: 2px 2px #5f5f5f;
-}
-
 .tutorial-title-side1 {
 	color: #547e92;
 }
@@ -12,10 +6,24 @@
 	color: #bedce2;
 }
 
-.tutorial-first-container {
+.tutorial-container {
 	width: 100%;
 	display:flex;
 	flex-wrap: wrap;
+}
+
+.logo-desc {
+	padding:60px;
+	width:50%;
+	display:flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.logo-img-desc {
+	align-self: center;
+    margin-bottom: -60px;
+    width: 350px;
 }
 
 .tutorial-desc {
@@ -31,26 +39,31 @@
 	text-shadow: 2px 2px #5f5f5f;
 }
 
-.logo-img-desc {
-	align-self: center;
-    margin-bottom: -60px;
-    width: 350px;
-}
-
-.logo-desc {
-	padding:60px;
-	width:50%;
-	display:flex;
-	flex-wrap: wrap;
-	justify-content: center;
-}
-
-.sections {
-    background-color: #bedce2;
-    text-align: center;
+.mechanics-container-1,
+.mechanics-container-2 {
+	text-align: center;
     padding: 15px 10px 10px;
-    color: #547e92;
 	text-shadow: 2px 2px #5f5f5f;
+}
+
+.mechanics-container-1 h1,
+.mechanics-container-2 h1 {
+    font-size: 60px;
+}
+
+.mechanics-container-1 p,
+.mechanics-container-2 p {
+    font-size: 24px;
+}
+
+.mechanics-container-1 {
+    background-color: #bedce2;
+	color: #547e92;
+}
+
+.mechanics-container-2 {
+    background-color: #547e92;
+	color: white;
 }
 
 section {
@@ -63,26 +76,27 @@ section {
 	padding: 10px;
 }
 
-.sections h1 {
-    font-size: 60px;
-}
-
-.sections p {
-    font-size: 24px;
-}
-
-.key {
-	width: 25%;
+.mechanic-1,
+.mechanic-2 {
+	width: 30%;
 	padding: 10px;
     color: white;
 	text-shadow: 2px 2px #5f5f5f;
     border-radius: 10px;
-    border:solid 4px #bedce2;
     box-shadow: 2px 2px #5f5f5f;
     margin: 10px;
 }
 
-.key img {
+.mechanic-1 {
+	border:solid 4px #547e92;
+}
+
+.mechanic-2 {
+	border:solid 4px #bedce2;
+}
+
+.mechanic-1 img,
+.mechanic-2 img {
 	width: 120px;
 	height: 180px;
 	margin-bottom: 6px;
@@ -91,16 +105,12 @@ section {
 
 .img {
     display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 }
 
 .img .img-desc {
     width: 180px;
-}
-
-.floor {
-	display:flex;
-	flex: wrap;
-	justify-content: center;
 }
 
 @media(max-width: 1000px) {
@@ -109,7 +119,8 @@ section {
 		width: 100%;
 	}
 
-    .key {
+    .mechanic-1,
+	.mechanic-2 {
 		width: 50%;
 	}
 }
