--- a/css/aboutStyles.css
+++ b/css/aboutStyles.css
@@ -34,8 +34,8 @@
 }
 
 .logo-img-desc {
-	align-self: center;
-	margin-bottom: -150px;
+	/* align-self: center; */
+	margin-bottom: -60px;
 	width: 200px;
 }
 
